Finished the implementation of the structured data

--- a/company.html
+++ b/company.html
@@ -44,7 +44,7 @@
           "name": "Aday Chocho"
         }
       ],
-      "logo": "dealer_group_logo.jpeg",
+      "logo": "https://static.vecteezy.com/system/resources/previews/000/623/239/original/auto-car-logo-template-vector-icon.jpg",
       "name": "Dealer Group",
       "telephone": "928 83 80 72"
     }
@@ -52,11 +52,11 @@
 </head>
 <body>
 <h1>INICIO</h1>
-<div>
-  <a href="truck.html"><button >truck page</button></a>
-  <a href="products.html"><button>product page</button></a>
-  <a href="store.html"><button>Store page</button></a>
-  <a href="offer.html"><button>Offer Page</button></a>
-</div>
+  <div>
+    <a href="truck.html"><button >truck page</button></a>
+    <a href="products.html"><button>product page</button></a>
+    <a href="store.html"><button>Store page</button></a>
+    <a href="offer.html"><button>Offer Page</button></a>
+  </div>
 </body>
 </html>
