--- a/shops.html
+++ b/shops.html
@@ -1,12 +1,93 @@
 <!DOCTYPE html> 
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dealer Group</title>
   <script type="application/ld+json">
-    
+    {
+      "@context": "https://schema.org",
+      "@type": "Restaurant",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Costa Adeje",
+        "addressRegion": "CA",
+        "postalCode": "38660",
+        "streetAddress": "C.C. Litoral, P.º Maritimo, 1"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4,5",
+        "reviewCount": "2217"
+      },
+      "name": "Restaurant Limoncello",
+      "openingHours": [
+        "Mo-Sa 11:00-14:30",
+        "Mo-Th 17:00-21:30",
+        "Fr-Sa 17:00-22:00"
+      ],
+      "servesCuisine": [
+        "Italian",
+        "Mediterranean"
+      ],
+      "telephone": "922711335",
+      "url": "https://www.google.es/maps/place/Restaurant+Limoncello/@28.0870514,-16.7381261,19.86z/data=!4m10!1m2!2m1!1srestaurantes+en+costa+adeje!3m6!1s0xc6a974fbbb40983:0x414a3acca96434d3!8m2!3d28.0870951!4d-16.7372824!15sChtyZXN0YXVyYW50ZXMgZW4gY29zdGEgYWRlamVaHSIbcmVzdGF1cmFudGVzIGVuIGNvc3RhIGFkZWplkgEYbWVkaXRlcnJhbmVhbl9yZXN0YXVyYW50mgEkQ2hkRFNVaE5NRzluUzBWSlEwRm5TVU5IYlUxSFRUTjNSUkFC4AEA!16s%2Fg%2F11clsdn947?entry=ttu"
+    }
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SelfStorage",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Costa Adeje",
+        "addressRegion": "CA",
+        "postalCode": "38660",
+        "streetAddress": "Paseo Playa Bahía del Duque, C. Unterhacing"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4,5",
+        "reviewCount": "8"
+      },
+      "name": "Wish Boutique",
+      "openingHours": [
+        "Mo-Sa 11:00-14:30",
+        "Mo-Th 16:00-21:30",
+        "Fr 17:00-22:00"
+      ],
+      "telephone": "628713429",
+      "url": "https://www.google.es/maps/place/Wish+Boutique/@28.0912167,-16.7519725,16z/data=!4m10!1m2!2m1!1stiendas+de+ropa+en+adeje!3m6!1s0xc6a974bea291b59:0x5f9ec0867395b54a!8m2!3d28.0912167!4d-16.7424453!15sChh0aWVuZGFzIGRlIHJvcGEgZW4gYWRlamVaGiIYdGllbmRhcyBkZSByb3BhIGVuIGFkZWplkgEKZHJlc3Nfc2hvcOABAA!16s%2Fg%2F11gbfs0rhp?entry=ttu"
+    } 
+  </script>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Store",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Costa Adeje",
+        "addressRegion": "CA",
+        "postalCode": "38660",
+        "streetAddress": "C.C. X-Sur, C. Lisboa, S/N, Local 5A"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4,4",
+        "reviewCount": "147"
+      },
+      "name": "Wish Boutique",
+      "openingHours": "Mo-Su 10:00-22:00",
+      "telephone": "922891382",
+      "url": "https://ultimainformatica.com/"
+    }
   </script>
 </head>
-<html lang="en">
-
+<body>
+  <h1>Store</h1>
+  <p>Store</p>
+  <div>
+    <a href="index.html"><button >Inicio</button></a>
+  </div>
+</body>
 </html>
