--- a/store.html
+++ b/store.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dealer Group</title>
   <script type="application/ld+json">
-    <script type="application/ld+json">
-        {
-          "@context": "https://schema.org",
-          "@type": "Store",
-          "name": "Main Stores",
-          "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 07:00-15:00",
-          "@context": "https://schema.org",
-          "telephone": "922463746",
-          "address":
-          {
-            "@type": "PostalAddress",
-            "streetAddress": "Calle San Juan de la Rambla 444",
-            "addressLocality": "Granadilla",
-            "addressRegion": "Canarias",
-            "addressCountry": "España"
-          }
-        }
-        </script>
+    {
+      "@context": "https://schema.org",
+      "@type": "Store",
+      "name": "Main Stores",
+      "openingHours": "Mo,Tu,We,Th,Fr,Sa,Su 07:00-15:00",
+      "telephone": "922463746",
+      "address":
+      {
+        "@type": "PostalAddress",
+        "streetAddress": "Calle San Juan de la Rambla 444",
+        "addressLocality": "Granadilla",
+        "addressRegion": "Canarias",
+        "addressCountry": "España"
+      }
+    }
   </script>
 </head>
-<html lang="en">
-  <body>
-    <h1>Store</h1>
-    <p>Store</p>
-    <div>
-      <a href="index.html"><button >Inicio</button></a>
-  </body>
+<body>
+  <h1>Store</h1>
+  <p>Store</p>
+  <div>
+    <a href="index.html"><button >Inicio</button></a>
+  </div>
+</body>
 </html>
