--- a/truck.html
+++ b/truck.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -64,11 +65,11 @@
     }
   </script>
 </head>
-<html lang="en">
-  <body>
-    <h1>Camión</h1>
-    <p>Camión</p>
-    <div>
-      <a href="index.html"><button >Inicio</button></a>
-  </body>
+<body>
+  <h1>Camión</h1>
+  <p>Camión</p>
+  <div>
+    <a href="index.html"><button >Inicio</button></a>
+  </div>
+</body>
 </html>
