Fixed some errors of the code implementation

--- a/company.html
+++ b/company.html
@@ -56,7 +56,7 @@
     <a href="truck.html"><button >truck page</button></a>
     <a href="products.html"><button>product page</button></a>
     <a href="store.html"><button>Store page</button></a>
-    <a href="offer.html"><button>Offer Page</button></a>
+    <a href="shops.html"><button>Shops Page</button></a>
   </div>
 </body>
 </html>
