--- a/truck.html
+++ b/truck.html
@@ -69,7 +69,7 @@
   <h1>Camión</h1>
   <p>Camión</p>
   <div>
-    <a href="index.html"><button >Inicio</button></a>
+    <a href="company.html"><button >Inicio</button></a>
   </div>
 </body>
 </html>
