--- a/products.html
+++ b/products.html
@@ -57,7 +57,7 @@
   <h1>Products</h1>
   <p>Products</p>
   <div>
-    <a href="index.html"><button >Inicio</button></a>
+    <a href="company.html"><button >Inicio</button></a>
   </div>
 </body>
 </html>
