--- a/shops.html
+++ b/shops.html
@@ -87,7 +87,7 @@
   <h1>Store</h1>
   <p>Store</p>
   <div>
-    <a href="index.html"><button >Inicio</button></a>
+    <a href="company.html"><button >Inicio</button></a>
   </div>
 </body>
 </html>
