--- a/store.html
+++ b/store.html
@@ -26,7 +26,7 @@
   <h1>Store</h1>
   <p>Store</p>
   <div>
-    <a href="index.html"><button >Inicio</button></a>
+    <a href="company.html"><button >Inicio</button></a>
   </div>
 </body>
 </html>
